python/testData/highlighting/yieldInDefaultValue.py
def f(x=(<error descr="'yield' outside of function">yield 10</error>)):
    return x
